fix/layout bugs

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,8 +6,8 @@
   border: 1px solid #f3f3f3;
   width: 220px;
   border-radius: 40px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  margin: 0 28px 30px 0;
+ 
   position: relative;
   transition: all 0.2s ease-out;
   transform: 0.2s ease-out;
