--- a/src/pages/Favorites/Favorites.module.scss
+++ b/src/pages/Favorites/Favorites.module.scss
@@ -91,7 +91,7 @@
 .cardContainer {
   display: flex;
   flex-wrap: wrap;
-  max-height: 690px;
+  max-height: 610px;
   overflow-y: auto;
   justify-content: center;
   .containerEmpty {
