--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -142,7 +142,7 @@
   .cardContainer {
     display: flex;
     flex-wrap: wrap;
-    max-height: 690px;
+    max-height: 630px;
     overflow-y: auto;
     justify-content: center;
   }
